{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 64,
  "lineage": "33d06416-e092-f61c-6407-0e4903e463e7",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d4cbf33677f7d3c5",
            "arn": "arn:aws:ec2:ap-south-1:614520203262:instance/i-029cf49299fa482bc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029cf49299fa482bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "uber-clone-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00ba925f1b23ea189",
            "private_dns": "ip-10-0-1-144.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.144",
            "public_dns": "ec2-3-6-89-242.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.89.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aaa2811c5cd2ffd0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7ab828cf7319f53",
            "tags": {
              "Name": "uber-clone-bastion"
            },
            "tags_all": {
              "Name": "uber-clone-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-014e074f39ebbb245"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_security_group.bastion",
            "module.compute.data.aws_ami.amazon_linux",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:loadbalancer/app/uber-clone-alb/6a464b152216a419",
            "arn_suffix": "app/uber-clone-alb/6a464b152216a419",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "uber-clone-alb-488352501.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:loadbalancer/app/uber-clone-alb/6a464b152216a419",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "uber-clone-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0db6b23ce63d9e867"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0832bdb5bbc5c0937"
              },
              {
                "subnet_id": "subnet-0988f364a00940d59"
              },
              {
                "subnet_id": "subnet-0a7ab828cf7319f53"
              }
            ],
            "subnets": [
              "subnet-0832bdb5bbc5c0937",
              "subnet-0988f364a00940d59",
              "subnet-0a7ab828cf7319f53"
            ],
            "tags": {
              "Name": "uber-clone-alb"
            },
            "tags_all": {
              "Name": "uber-clone-alb"
            },
            "vpc_id": "vpc-099bbff9822e7c358",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.web",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:listener/app/uber-clone-alb/6a464b152216a419/e1733994ab1125b7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:targetgroup/uber-clone-app-tg/290016fa85cef456",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:listener/app/uber-clone-alb/6a464b152216a419/e1733994ab1125b7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:loadbalancer/app/uber-clone-alb/6a464b152216a419",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_lb.main",
            "module.compute.aws_lb_target_group.app",
            "module.security.aws_security_group.web",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:targetgroup/uber-clone-app-tg/290016fa85cef456",
            "arn_suffix": "targetgroup/uber-clone-app-tg/290016fa85cef456",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:614520203262:targetgroup/uber-clone-app-tg/290016fa85cef456",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:614520203262:loadbalancer/app/uber-clone-alb/6a464b152216a419"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "uber-clone-app-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "uber-clone-app-tg"
            },
            "tags_all": {
              "Name": "uber-clone-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:security-group/sg-014e074f39ebbb245",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014e074f39ebbb245",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "uber-clone-bastion-20250930124637087600000004",
            "name_prefix": "uber-clone-bastion-",
            "owner_id": "614520203262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "uber-clone-bastion-sg"
            },
            "tags_all": {
              "Name": "uber-clone-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:security-group/sg-02a24c8921233bc4f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a24c8921233bc4f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f5c4116e6eab542"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0db6b23ce63d9e867"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "uber-clone-app-20250930124638558900000006",
            "name_prefix": "uber-clone-app-",
            "owner_id": "614520203262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "uber-clone-app-sg"
            },
            "tags_all": {
              "Name": "uber-clone-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.web",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:security-group/sg-05f5c4116e6eab542",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f5c4116e6eab542",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "uber-clone-bastion-20250930124636982800000003",
            "name_prefix": "uber-clone-bastion-",
            "owner_id": "614520203262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "uber-clone-bastion-sg"
            },
            "tags_all": {
              "Name": "uber-clone-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:security-group/sg-03acc6e26af57dd0b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03acc6e26af57dd0b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02a24c8921233bc4f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "uber-clone-db-20250930124640008100000007",
            "name_prefix": "uber-clone-db-",
            "owner_id": "614520203262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "uber-clone-database-sg"
            },
            "tags_all": {
              "Name": "uber-clone-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.web",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:security-group/sg-0db6b23ce63d9e867",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db6b23ce63d9e867",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "uber-clone-web-20250930124636338900000001",
            "name_prefix": "uber-clone-web-",
            "owner_id": "614520203262",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "uber-clone-web-sg"
            },
            "tags_all": {
              "Name": "uber-clone-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0272a529cf0161b38",
            "arn": "arn:aws:ec2:ap-south-1:614520203262:elastic-ip/eipalloc-0272a529cf0161b38",
            "association_id": "eipassoc-00434dc59a0e5c798",
            "domain": "vpc",
            "id": "eipalloc-0272a529cf0161b38",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-03191fac19ff23da2",
            "private_dns": "ip-10-0-1-53.ap-south-1.compute.internal",
            "private_ip": "10.0.1.53",
            "public_dns": "ec2-13-204-0-14.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.0.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "uber-clone-nat-eip-1"
            },
            "tags_all": {
              "Name": "uber-clone-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c7327622f45d880",
            "arn": "arn:aws:ec2:ap-south-1:614520203262:elastic-ip/eipalloc-03c7327622f45d880",
            "association_id": "eipassoc-0a6b79eac959a4c46",
            "domain": "vpc",
            "id": "eipalloc-03c7327622f45d880",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0039ffedc24727ae3",
            "private_dns": "ip-10-0-2-228.ap-south-1.compute.internal",
            "private_ip": "10.0.2.228",
            "public_dns": "ec2-13-204-187-162.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.187.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "uber-clone-nat-eip-2"
            },
            "tags_all": {
              "Name": "uber-clone-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcf704a52a9362b7",
            "arn": "arn:aws:ec2:ap-south-1:614520203262:elastic-ip/eipalloc-0dcf704a52a9362b7",
            "association_id": "eipassoc-0c9b2d19002288547",
            "domain": "vpc",
            "id": "eipalloc-0dcf704a52a9362b7",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b35842f2a693daf4",
            "private_dns": "ip-10-0-3-90.ap-south-1.compute.internal",
            "private_ip": "10.0.3.90",
            "public_dns": "ec2-13-203-169-214.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.169.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "uber-clone-nat-eip-3"
            },
            "tags_all": {
              "Name": "uber-clone-nat-eip-3"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:internet-gateway/igw-0037fdb5e170735b0",
            "id": "igw-0037fdb5e170735b0",
            "owner_id": "614520203262",
            "tags": {
              "Name": "uber-clone-igw"
            },
            "tags_all": {
              "Name": "uber-clone-igw"
            },
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0272a529cf0161b38",
            "association_id": "eipassoc-00434dc59a0e5c798",
            "connectivity_type": "public",
            "id": "nat-0aefbdc299b199072",
            "network_interface_id": "eni-03191fac19ff23da2",
            "private_ip": "10.0.1.53",
            "public_ip": "13.204.0.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a7ab828cf7319f53",
            "tags": {
              "Name": "uber-clone-nat-gateway-1"
            },
            "tags_all": {
              "Name": "uber-clone-nat-gateway-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c7327622f45d880",
            "association_id": "eipassoc-0a6b79eac959a4c46",
            "connectivity_type": "public",
            "id": "nat-0a2c01e5a88501bc8",
            "network_interface_id": "eni-0039ffedc24727ae3",
            "private_ip": "10.0.2.228",
            "public_ip": "13.204.187.162",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0988f364a00940d59",
            "tags": {
              "Name": "uber-clone-nat-gateway-2"
            },
            "tags_all": {
              "Name": "uber-clone-nat-gateway-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcf704a52a9362b7",
            "association_id": "eipassoc-0c9b2d19002288547",
            "connectivity_type": "public",
            "id": "nat-0f50f4d7f415ec1d2",
            "network_interface_id": "eni-0b35842f2a693daf4",
            "private_ip": "10.0.3.90",
            "public_ip": "13.203.169.214",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0832bdb5bbc5c0937",
            "tags": {
              "Name": "uber-clone-nat-gateway-3"
            },
            "tags_all": {
              "Name": "uber-clone-nat-gateway-3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:route-table/rtb-04e3a24f4444b2ec4",
            "id": "rtb-04e3a24f4444b2ec4",
            "owner_id": "614520203262",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "uber-clone-database-rt"
            },
            "tags_all": {
              "Name": "uber-clone-database-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:route-table/rtb-0cd051436306e51ce",
            "id": "rtb-0cd051436306e51ce",
            "owner_id": "614520203262",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aefbdc299b199072",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uber-clone-private-rt-1"
            },
            "tags_all": {
              "Name": "uber-clone-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:route-table/rtb-052002bcbd64dcc32",
            "id": "rtb-052002bcbd64dcc32",
            "owner_id": "614520203262",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a2c01e5a88501bc8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uber-clone-private-rt-2"
            },
            "tags_all": {
              "Name": "uber-clone-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:route-table/rtb-0b9b7b25cf0e1b268",
            "id": "rtb-0b9b7b25cf0e1b268",
            "owner_id": "614520203262",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f50f4d7f415ec1d2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uber-clone-private-rt-3"
            },
            "tags_all": {
              "Name": "uber-clone-private-rt-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:route-table/rtb-0a60a562721bf5270",
            "id": "rtb-0a60a562721bf5270",
            "owner_id": "614520203262",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0037fdb5e170735b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uber-clone-public-rt"
            },
            "tags_all": {
              "Name": "uber-clone-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00709dce7f249e6cf",
            "route_table_id": "rtb-04e3a24f4444b2ec4",
            "subnet_id": "subnet-0beb23f84d6d6b523"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0917fb0f4143eebd9",
            "route_table_id": "rtb-04e3a24f4444b2ec4",
            "subnet_id": "subnet-0db6ecc8b94c5e6be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df45acbb27054f8c",
            "route_table_id": "rtb-04e3a24f4444b2ec4",
            "subnet_id": "subnet-0c69368aea4112cda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004aa6f9574638267",
            "route_table_id": "rtb-0cd051436306e51ce",
            "subnet_id": "subnet-0fe2878ca9da26287"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edf7e402ebed6c15",
            "route_table_id": "rtb-052002bcbd64dcc32",
            "subnet_id": "subnet-0cf25fdb6475d18a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081a75422803c23b4",
            "route_table_id": "rtb-0b9b7b25cf0e1b268",
            "subnet_id": "subnet-01564431e5a6c332f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095b62332561a67c5",
            "route_table_id": "rtb-0a60a562721bf5270",
            "subnet_id": "subnet-0a7ab828cf7319f53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0781456144367aa77",
            "route_table_id": "rtb-0a60a562721bf5270",
            "subnet_id": "subnet-0988f364a00940d59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006c13d57db67bf00",
            "route_table_id": "rtb-0a60a562721bf5270",
            "subnet_id": "subnet-0832bdb5bbc5c0937"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:subnet/subnet-0beb23f84d6d6b523",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0beb23f84d6d6b523",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614520203262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-clone-database-subnet-1",
              "Type": "Database"
            },
            "tags_all": {
              "Name": "uber-clone-database-subnet-1",
              "Type": "Database"
            },
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:subnet/subnet-0db6ecc8b94c5e6be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db6ecc8b94c5e6be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614520203262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-clone-database-subnet-2",
              "Type": "Database"
            },
            "tags_all": {
              "Name": "uber-clone-database-subnet-2",
              "Type": "Database"
            },
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:subnet/subnet-0c69368aea4112cda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c69368aea4112cda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614520203262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-clone-database-subnet-3",
              "Type": "Database"
            },
            "tags_all": {
              "Name": "uber-clone-database-subnet-3",
              "Type": "Database"
            },
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:subnet/subnet-0fe2878ca9da26287",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe2878ca9da26287",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614520203262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-clone-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "uber-clone-private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:subnet/subnet-0cf25fdb6475d18a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf25fdb6475d18a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614520203262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-clone-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "uber-clone-private-subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:subnet/subnet-01564431e5a6c332f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01564431e5a6c332f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614520203262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-clone-private-subnet-3",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "uber-clone-private-subnet-3",
              "Type": "Private"
            },
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:subnet/subnet-0a7ab828cf7319f53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7ab828cf7319f53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "614520203262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-clone-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "uber-clone-public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:subnet/subnet-0988f364a00940d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0988f364a00940d59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "614520203262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-clone-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "uber-clone-public-subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:subnet/subnet-0832bdb5bbc5c0937",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0832bdb5bbc5c0937",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "614520203262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-clone-public-subnet-3",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "uber-clone-public-subnet-3",
              "Type": "Public"
            },
            "vpc_id": "vpc-099bbff9822e7c358"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:614520203262:vpc/vpc-099bbff9822e7c358",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e0be6e47e4219b00",
            "default_route_table_id": "rtb-085545435b0a1f9b3",
            "default_security_group_id": "sg-0047c7fe28d506a3a",
            "dhcp_options_id": "dopt-0df28c3c04682cd6b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099bbff9822e7c358",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085545435b0a1f9b3",
            "owner_id": "614520203262",
            "tags": {
              "Name": "uber-clone-vpc"
            },
            "tags_all": {
              "Name": "uber-clone-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}